--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "garlicore-lib",
-  "main": "./garlicore-lib.min.js",
+  "name": "tuxcore-lib",
+  "main": "./tuxcore-lib.min.js",
   "version": "0.13.19",
-  "homepage": "http://garlicore.io",
+  "homepage": "https://github.com/Wuzado/tuxcore-lib",
   "authors": [
     "BitPay, Inc."
   ],
@@ -12,7 +12,7 @@
   ],
   "keywords": [
     "litecoin",
-    "garlicore",
+    "tuxcore",
     "btc",
     "satoshi"
   ],
