--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Wuzado/tuxcore-lib.git"
+    "url": "https://github.com/TuxcoinOrg/tuxcoin-lib.git"
   },
   "browser": {
     "request": "browser-request"
